<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Colorful Photo</string>
    <string name="main_null_file_tips">No document, please click“+”to scan the document you need!</string>
    <string name="text_done">Done</string>
    <string name="build_folder">New Folder</string>
    <string name="input_name_tips">Please enter a name</string>
    <string name="create_folder_failed">Failed to create folder</string>
    <string name="rename_folder_failed">Rename failed</string>
    <string name="filename_repeat">filename already exists</string>
    <string name="common_rename">Rename</string>
    <string name="move_file_title">Move to</string>
    <string name="move_file_error">Unable to select all files for move</string>
    <string name="move_file_failed">File move failed</string>
    <string name="move_file_success">File move successfully</string>
    <string name="setting_title">Setting</string>
    <string name="setting_contact_us">Contact us</string>
    <string name="setting_privacy">Privacy agreement</string>
    <string name="setting_share">Share</string>
    <string name="failed_permission">Failed to obtain permission</string>
    <string name="take_photo_failed">Failed to take photo</string>
    <string name="picture_share">Share</string>
    <string name="picture_filter">Filter</string>
    <string name="picture_rotate">Rotate</string>
    <string name="picture_tailor">Tailor</string>
    <string name="picture_delete">Delete</string>
    <string name="select_photo_error">Failed to select photo</string>
    <string name="text_jpg">JPG</string>
    <string name="text_pdf">PDF</string>
    <string name="save_picture_to_local_success">Saved to：%1$s</string>
    <string name="save_picture_to_local_failed">Failed to save image</string>
    <string name="share_error">Failed to share</string>
    <string name="delete_success">successfully deleted</string>
    <string name="delete_picture_tips">Do you want to delete this picture？</string>
    <string name="delete_file_tips">Do you need to delete the selected files?</string>
    <string name="common_del">Delete</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_waring_dialog_title">Tips</string>

    <!-- 需要修改的配置   -->
    <string name="contact_email">email//</string>
    <string name="privacy_url">http://www.baidu.com</string>
    <string name="facebook_app_id"> facebook id</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>

    <!-- VPN   -->
    <string name="v_title">VPN</string>
    <string name="text_upload">UPLOAD</string>
    <string name="text_down">DOWNLOAD</string>
    <string name="select_server_title">Select Server</string>
    <string name="connect_status_connected">Connected succeeded</string>
    <string name="connect_status_disconnected">Disconnected succeeded</string>
    <string name="common_sure">Sure</string>
    <string name="connect_network_tips">Please connect to the Internet</string>
    <string name="permission_open_tips">Permission is insufficient, do you want to go to the mobile phone system to enable the application permission?</string>
    <string name="disconnected_tips">Are you currently in a connected state and need to disconnect after reconnecting? Are you sure you want to disconnect the current connection?</string>


</resources>