<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_bg"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="285dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/common_waring_dialog_title"
            android:textColor="#31314F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:minHeight="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/permission_open_tips"
            android:textColor="#31314F"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_cancel"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/common_cancel"
            android:textColor="#31314F"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toLeftOf="@id/tv_sure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_save_btn"
            android:gravity="center"
            android:singleLine="true"
            android:text="Go"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>