<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#020302"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="#1C1E2F"
                android:textSize="16sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintRight_toLeftOf="@id/tv1"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/setting_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/title_layout">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv1"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_contact_us"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv1.1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#1C1E2F"
                android:textSize="14sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/iv1"
                app:layout_constraintRight_toLeftOf="@id/iv1.1"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/setting_contact_us" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacy_layout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/contact_us">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_privace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv2.1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#1C1E2F"
                android:textSize="14sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/iv2"
                app:layout_constraintRight_toLeftOf="@id/iv2.1"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/setting_privacy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share_layout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/privacy_layout">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv3.1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#1C1E2F"
                android:textSize="14sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/iv3"
                app:layout_constraintRight_toLeftOf="@id/iv3.1"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/setting_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>