<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="471dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_v_main_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_server"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_server"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/v_title"
                android:textColor="#031030"
                android:textSize="16sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintRight_toLeftOf="@id/iv_server"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="247dp"
            android:layout_height="257dp"
            android:layout_marginTop="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            app:lottie_fileName="sc_v_animator.zip"
            app:lottie_loop="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_native"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="92dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_connection_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="00:00:00"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_native" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="United States - London"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_connection_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_upload_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="0 Kb/s"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/text_upload"
            android:textColor="#BFD5F6"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upload_speed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_down_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="0 Kb/s"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/text_down"
            android:textColor="#BFD5F6"
            android:textSize="10sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_down_speed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_connection"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_v_status_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upload_speed" />

        <FrameLayout
            android:id="@+id/container_ad"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="-8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_ad_splace"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/iv_connection" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>